// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Tag
    classes={
      Object {
        "big": "big",
        "bigIcon": "bigIcon",
        "bigTagText": "bigTagText",
        "default": "default",
        "defaultIcon": "defaultIcon",
        "error": "error",
        "errorIcon": "errorIcon",
        "icon": "icon",
        "info": "info",
        "infoIcon": "infoIcon",
        "link": "link",
        "linkIcon": "linkIcon",
        "medium": "medium",
        "mediumIcon": "mediumIcon",
        "mediumTagText": "mediumTagText",
        "standard": "standard",
        "standardIcon": "standardIcon",
        "standardTagText": "standardTagText",
        "success": "success",
        "successIcon": "successIcon",
        "tag": "tag",
        "tagText": "tagText",
        "warning": "warning",
        "warningIcon": "warningIcon",
      }
    }
    size="standard"
    theme="default"
  >
    Tag
  </Tag>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        undefined,
        <span
          className="tagText standardTagText"
        >
          Tag
        </span>,
      ],
      "className": "tag standard default ",
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      undefined,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Tag",
          "className": "tagText standardTagText",
        },
        "ref": null,
        "rendered": "Tag",
        "type": "span",
      },
    ],
    "type": "label",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          <span
            className="tagText standardTagText"
          >
            Tag
          </span>,
        ],
        "className": "tag standard default ",
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Tag",
            "className": "tagText standardTagText",
          },
          "ref": null,
          "rendered": "Tag",
          "type": "span",
        },
      ],
      "type": "label",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Tag styles matches the snapshot 1`] = `
Object {
  "big": Object {
    "borderRadius": 32,
    "height": 40,
    "padding": Array [
      8,
      16,
    ],
  },
  "bigIcon": Object {
    "height": 18,
    "width": 18,
  },
  "bigTagText": Object {
    "fontSize": 17,
  },
  "default": Object {
    "background": "#f5f5f5",
    "color": "#222222",
  },
  "defaultIcon": Object {
    "background": [Function],
  },
  "error": Object {
    "background": "rgba(219, 55, 55, 0.1)",
    "color": "#db3737",
  },
  "errorIcon": Object {
    "background": [Function],
  },
  "icon": Object {
    "backgroundRepeat": "no-repeat",
    "content": "\\"\\"",
    "display": "inline-block",
    "left": 0,
    "marginRight": 4,
    "paddingBottom": 0,
    "position": "relative",
    "top": -2,
  },
  "info": Object {
    "backgroundColor": "rgba(87, 54, 171, 0.1)",
    "color": "#5736ab",
  },
  "infoIcon": Object {
    "background": [Function],
  },
  "link": Object {
    "background": "rgba(9, 70, 203, 0.1)",
    "color": "#0946CB",
  },
  "linkIcon": Object {
    "background": [Function],
  },
  "medium": Object {
    "height": 32,
    "padding": Array [
      5,
      12,
      7,
      12,
    ],
  },
  "mediumIcon": Object {
    "height": 18,
    "width": 18,
  },
  "mediumTagText": Object {
    "fontSize": 15,
  },
  "standard": Object {
    "height": 16,
    "padding": Array [
      1,
      8,
      3,
      8,
    ],
  },
  "standardIcon": Object {
    "height": 12,
    "width": 12,
  },
  "standardTagText": Object {
    "fontSize": 11,
  },
  "success": Object {
    "background": "rgba(0, 149, 55, 0.1)",
    "color": "#009537",
  },
  "successIcon": Object {
    "background": [Function],
  },
  "tag": Object {
    "borderRadius": 16,
    "boxSizing": "border-box",
    "display": "inline-block",
    "lineHeight": "12px",
    "overflow": "hidden",
    "position": "relative",
    "textAlign": "center",
  },
  "tagText": Object {
    "boxSizing": "border-box",
    "display": "inline-block",
    "fontFamily": "'HK Grotesk', sans-serif",
    "fontStretch": "normal",
    "fontStyle": "normal",
    "fontWeight": "600",
    "letterSpacing": "normal",
    "lineHeight": 1.4,
    "overflow": "hidden",
    "paddingRight": [Function],
    "position": "relative",
    "textAlign": "center",
  },
  "warning": Object {
    "background": "rgba(255, 197, 73, 0.1)",
    "color": "#ffc549",
  },
  "warningIcon": Object {
    "background": [Function],
  },
}
`;

exports[`TagJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(Tag)
    size="standard"
    theme="default"
  >
    Tag
  </Jss(Tag)>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": "Tag",
      "classes": Object {
        "big": "Tag-big-0-1-35 Tag-big-0-1-4",
        "bigIcon": "Tag-bigIcon-0-1-48 Tag-bigIcon-0-1-18",
        "bigTagText": "Tag-bigTagText-0-1-38 Tag-bigTagText-0-1-8",
        "default": "Tag-default-0-1-39 Tag-default-0-1-9",
        "defaultIcon": "Tag-defaultIcon-0-1-26 Tag-defaultIcon-0-1-19",
        "error": "Tag-error-0-1-43 Tag-error-0-1-13",
        "errorIcon": "Tag-errorIcon-0-1-30 Tag-errorIcon-0-1-23",
        "icon": "Tag-icon-0-1-45 Tag-icon-0-1-15",
        "info": "Tag-info-0-1-40 Tag-info-0-1-10",
        "infoIcon": "Tag-infoIcon-0-1-27 Tag-infoIcon-0-1-20",
        "link": "Tag-link-0-1-44 Tag-link-0-1-14",
        "linkIcon": "Tag-linkIcon-0-1-31 Tag-linkIcon-0-1-24",
        "medium": "Tag-medium-0-1-34 Tag-medium-0-1-3",
        "mediumIcon": "Tag-mediumIcon-0-1-47 Tag-mediumIcon-0-1-17",
        "mediumTagText": "Tag-mediumTagText-0-1-37 Tag-mediumTagText-0-1-7",
        "standard": "Tag-standard-0-1-33 Tag-standard-0-1-2",
        "standardIcon": "Tag-standardIcon-0-1-46 Tag-standardIcon-0-1-16",
        "standardTagText": "Tag-standardTagText-0-1-36 Tag-standardTagText-0-1-6",
        "success": "Tag-success-0-1-41 Tag-success-0-1-11",
        "successIcon": "Tag-successIcon-0-1-28 Tag-successIcon-0-1-21",
        "tag": "Tag-tag-0-1-32 Tag-tag-0-1-1",
        "tagText": "Tag-tagText-0-1-25 Tag-tagText-0-1-5",
        "warning": "Tag-warning-0-1-42 Tag-warning-0-1-12",
        "warningIcon": "Tag-warningIcon-0-1-29 Tag-warningIcon-0-1-22",
      },
      "size": "standard",
      "theme": "default",
    },
    "ref": null,
    "rendered": "Tag",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": "Tag",
        "classes": Object {
          "big": "Tag-big-0-1-35 Tag-big-0-1-4",
          "bigIcon": "Tag-bigIcon-0-1-48 Tag-bigIcon-0-1-18",
          "bigTagText": "Tag-bigTagText-0-1-38 Tag-bigTagText-0-1-8",
          "default": "Tag-default-0-1-39 Tag-default-0-1-9",
          "defaultIcon": "Tag-defaultIcon-0-1-26 Tag-defaultIcon-0-1-19",
          "error": "Tag-error-0-1-43 Tag-error-0-1-13",
          "errorIcon": "Tag-errorIcon-0-1-30 Tag-errorIcon-0-1-23",
          "icon": "Tag-icon-0-1-45 Tag-icon-0-1-15",
          "info": "Tag-info-0-1-40 Tag-info-0-1-10",
          "infoIcon": "Tag-infoIcon-0-1-27 Tag-infoIcon-0-1-20",
          "link": "Tag-link-0-1-44 Tag-link-0-1-14",
          "linkIcon": "Tag-linkIcon-0-1-31 Tag-linkIcon-0-1-24",
          "medium": "Tag-medium-0-1-34 Tag-medium-0-1-3",
          "mediumIcon": "Tag-mediumIcon-0-1-47 Tag-mediumIcon-0-1-17",
          "mediumTagText": "Tag-mediumTagText-0-1-37 Tag-mediumTagText-0-1-7",
          "standard": "Tag-standard-0-1-33 Tag-standard-0-1-2",
          "standardIcon": "Tag-standardIcon-0-1-46 Tag-standardIcon-0-1-16",
          "standardTagText": "Tag-standardTagText-0-1-36 Tag-standardTagText-0-1-6",
          "success": "Tag-success-0-1-41 Tag-success-0-1-11",
          "successIcon": "Tag-successIcon-0-1-28 Tag-successIcon-0-1-21",
          "tag": "Tag-tag-0-1-32 Tag-tag-0-1-1",
          "tagText": "Tag-tagText-0-1-25 Tag-tagText-0-1-5",
          "warning": "Tag-warning-0-1-42 Tag-warning-0-1-12",
          "warningIcon": "Tag-warningIcon-0-1-29 Tag-warningIcon-0-1-22",
        },
        "size": "standard",
        "theme": "default",
      },
      "ref": null,
      "rendered": "Tag",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
